# app-rust-nuxt

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
api-rust/: .dockerignore  .env-example  .gitignore  Cargo.toml  Dockerfile.rust  README.md  diesel.toml  entrypoint.sh
api-rust/migrations/00000000000000_diesel_initial_setup/: up.sql
api-rust/migrations/2024-03-26-064653_create_todo_table/: up.sql
api-rust/migrations/2024-03-26-072240_create_post_table/: up.sql
api-rust/migrations/2024-04-28-070705_create_user_table/: up.sql
api-rust/migrations/2024-05-07-034320_create_profile_table/: down.sql  up.sql
api-rust/src/: main.rs
api-rust/src/api/: api.rs
api-rust/src/auth/: password.rs  tokens.rs
api-rust/src/controllers/: mod.rs  posts_controller.rs  profiles_controller.rs  todos_controller.rs  users_controller.rs
api-rust/src/controllers/users/: mod.rs  passwords_controller.rs  registrations_controller.rs  sessions_controller.rs
api-rust/src/db/: database.rs  mod.rs  schema.rs
api-rust/src/models/: mod.rs  post.rs  profile.rs  todo.rs  user.rs
api-rust/src/models/users/: trackable.rs
api-rust/src/repositories/: base_repository.rs  database.rs  mod.rs  posts_repository.rs  profiles_repository.rs  todos_repository.rs  users_repository.rs
api-rust/src/repository/: database.rs  mod.rs
api-rust/src/routes/: router.rs
api-rust/src/utils/: pagination.rs
app-nuxt/: .dockerignore  .env-example  .gitignore  Dockerfile.nuxt  README.md  app.vue  nuxt.config.ts  package.json
app-nuxt/components/: AppFooter.vue  AppHeader.vue
(+23 files in other folders)
