[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"
default-run = "api-rust"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"
# required-features = ["bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "chrono", "uuid"] }
actix-cors = "=0.6.5"
fakeit = "1.2.0"
argon2 = "0.5.3"
